- Added Condition and CondVar - Added CondVarTest - Converted to use CondVar: Promise, Responses, Request/UnicastRequest/GroupRequest - Changed GC flags in jgroups.sh - TimeService: converted ConnectionMap, TP, UNICAST3, FD_ALL, FD_HOST to use nanosecs rather than msecs - TimeService: converted ExpiryCache to use nanosecs rather than msecs
- Converted LazyRemovalCache to use nanosecs rather than msecs

- Changed Discovery to use nanosecs rather than msecs

- Changed ResponseCollector to use nanosecs correctly

- Changed TimeScheduler3 to use nanosecs correctly

- Deprecated TimeScheduler2

- Changed MERGE2 to use nanosecs correctly

- Changed RATE_LIMITER to use nanosecs correctly

- Changed FlowControl/MFC to use nanosecs correctly

- Changed Locking to use nanosecs correctly

- Removed busy sleeping from Util

- Changed GMS to use nanosec instead of millisecond time

- Changed FD to use nanosec instead of millisecond time

- Deprecated UNICAST and UNICAST2

- Deprecated NAKACK